server/yaml/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    #traefik.ingress.kubernetes.io/redirect-permanent: "true"
    #traefik.ingress.kubernetes.io/redirect-regex: "^http://(.*)"
    #traefik.ingress.kubernetes.io/redirect-replacement: "https://$1"
    #traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: hdtb-team.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: service-pwa
          servicePort: 80
  - host: api.hdtb-team.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: service-api
          servicePort: 80
  # - host: content.hdtb-team.ca
  #   http:
  #     paths:
  #     - path: /
  #       backend:
  #         serviceName: admin-service
  #         servicePort: 80
  # - host: google-assistant.hdtb-team.ca
  #   http:
  #     paths:
  #     - path: /
  #       backend:
  #         serviceName: google-service
  #         servicePort: 80
